# Animal-Sim

./: CMakeLists.txt  LICENSE  README.md  imgui.ini  setup_glad.sh  start.sh
src/: main.cpp
src/core/: Application.cpp  Application.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/gui/: GuiManager.cpp  GuiManager.h
src/interactive/: Controller.cpp  Controller.h
src/renderer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/scene/: AnimalEntity.cpp  AnimalEntity.h  ProcedureAnimation.cpp  ProcedureAnimation.h  Scene.cpp  Scene.h
src/simulation/: Animal.cpp  Animal.h  AnimalRegistry.cpp  AnimalRegistry.h  DrugCompound.h  DrugRegistry.cpp  DrugRegistry.h  ExperimentBase.cpp  ExperimentBase.h  RandomEngine.cpp  RandomEngine.h  SimulationEngine.cpp  SimulationEngine.h  Types.h
src/simulation/experiments/: BehavioralExperiment.cpp  BehavioralExperiment.h  DrugEfficacyExperiment.cpp  DrugEfficacyExperiment.h  PKExperiment.cpp  PKExperiment.h  SkinIrritationExperiment.cpp  SkinIrritationExperiment.h  ToxicologyExperiment.cpp  ToxicologyExperiment.h
